k8s/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pulse-web-svc
  labels:
    app: pulse-web
spec:
  selector:
    app: pulse-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
